--- a/ressources/liaisons/scss/pages/_catalogue.scss
+++ b/ressources/liaisons/scss/pages/_catalogue.scss
@@ -10,7 +10,7 @@
   }
 }
 
-
+// STYLES DU CATALOGUE
 .catalogue {
   &__auteurs {
     list-style-type: none;
@@ -35,12 +35,14 @@
   &__btn {
     background-color: $TURQUOISE;
     color: white;
-    padding: 8px 50px;
-    font-size: 16px;
+    padding: 10px 0;
+    font-size: 14px;
     border: none;
     border-radius: 50px;
     display: block;
     text-align: center;
+    margin-top: -10px;
+    margin-bottom: 15px;
 
     &:hover {
       text-decoration: none;
@@ -101,7 +103,8 @@
       text-align: center;
       margin-left: 15%;
       margin-top: 5%;
-      margin-bottom: 5%;
+      padding: 10px 24px !important;
+      font-size: 12px !important;
 
       &:hover {
         color: white;
@@ -110,7 +113,6 @@
 
       @media(min-width: $DESKTOP-NORMAL) {
         padding: 2px 50px;
-        font-size: 14px;
       }
       @media(min-width: $DESKTOP-LARGE) {
         padding: 2px 74px;
@@ -121,6 +123,20 @@
   &__categories {
     background-color: #EEEEEE;
     display: none;
+
+    &__actif {
+      text-align: center;
+
+      @media (min-width: $DESKTOP-NORMAL) {
+        margin-left: 25%;
+        font-size: 18px;
+      }
+
+      &--h2 {
+        color: $ROUGE;
+        font-size: 20px !important;
+      }
+    }
 
     &__contenu {
       margin-left: 5%;
@@ -137,7 +153,7 @@
     &__liste {
       list-style-type: none;
       padding: 0;
-      margin-top: 10%;
+      margin-top: 5%;
 
       &__item {
         margin-bottom: 5%;
@@ -161,6 +177,12 @@
       height: 100%;
       position: relative;
       background-color: rgba(0, 0, 0, 0.5);
+    }
+  }
+
+  &__filAriane {
+    @media(min-width: $DESKTOP-NORMAL) {
+      margin-bottom: -20px;
     }
   }
 
@@ -249,12 +271,37 @@
   }
 
   &__pagination {
-    margin-bottom: 2%;
-    margin-left: 20px;
-    margin-top: 23px;
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &__fleche {
+      color: $TURQUOISE;
+      font-size: 24px;
+      margin: 10px;
+
+      &:hover {
+        color: $GRIS_FONCE;
+      }
+    }
+
+    &__numeroPage {
+      font-size: 18px;
+      padding-top: 8px;
+    }
+
+    &__premierDernier {
+      color: $TURQUOISE;
+
+      &:hover {
+        color: $GRIS_FONCE;
+      }
+    }
+
     @media(min-width: $DESKTOP-NORMAL) {
-      margin-top: 10px;
-      text-align: center;
+      margin-bottom: 5px;
+      margin-top: -10px;
     }
   }
 
@@ -267,16 +314,28 @@
   }
 
   &__titre {
-    color: white;
-    font-size: 24px;
-
-    &:hover {
-      color: $ROUGE;
-      text-decoration: none;
-    }
-
+    text-align: center;
     @media(min-width: $DESKTOP-NORMAL) {
       font-size: 18px;
+      margin-left: 25%;
+      margin-bottom: 2%;
+    }
+  }
+
+  &__titreLivre {
+    font-size: 32px;
+    color: $BEIGE;
+
+    &:hover {
+      color: $BLANC;
+    }
+
+    @media (min-width: $DESKTOP-NORMAL) {
+      font-size: 16px;
+      color: $BLANC;
+      &:hover {
+        color: $ROUGE;
+      }
     }
   }
 
@@ -303,7 +362,7 @@
 
 }
 
-// CATÉGORIES
+// CATÉGORIES MOBILE
 .dropbtn {
   display: inline;
   background-color: $TURQUOISE;
@@ -312,10 +371,6 @@
   font-size: 16px;
   border: none;
   border-radius: 50px;
-  margin-left: 20%;
-  @media(min-width: $TABLETTE) {
-    margin-left: 28%;
-  }
 
   @media (min-width: $DESKTOP-NORMAL) {
     display: none;
@@ -323,8 +378,9 @@
 }
 
 .dropdown {
-  position: relative;
-  display: inline;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .dropdown-content {
@@ -335,60 +391,15 @@
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  margin-left: 20%;
+  top: 60px;
 }
 
 .dropdown-content a {
-  padding: 12px 16px;
+  padding: 0 16px;
   text-decoration: none;
   display: block;
 }
 
 .show {
   display: block;
-}
-
-/* Styles de la barre de recherche */
-.search-box {
-  height: 25px;
-  display: inline;
-  width: 300px;
-  position: relative;
-  display: inline-block;
-  font-size: 14px;
-
-}
-
-.search-box input[type="text"] {
-  height: 32px;
-  padding: 5px 10px;
-  border: 1px solid #CCCCCC;
-  font-size: 14px;
-  border-radius:50px;
-  padding-left: 15px;
-}
-
-.result {
-  position: absolute;
-  z-index: 999;
-  top: 100%;
-  left: 0;
-}
-
-.search-box input[type="text"], .result {
-  width: 100%;
-  box-sizing: border-box;
-}
-
-/* Formatting result items */
-.result p {
-  margin: 0;
-  padding: 7px 10px;
-  border: 1px solid #CCCCCC;
-  border-top: none;
-  cursor: pointer;
-}
-
-.result p:hover {
-  background: #f2f2f2;
 }
