--- a/ressources/liaisons/scss/pages/_accueil.scss
+++ b/ressources/liaisons/scss/pages/_accueil.scss
@@ -91,6 +91,22 @@
 }
 
 .accueil {
+  .bouton_voir_plus {
+    color: white;
+    background-color: $TURQUOISE;
+    padding: 10px;
+    border-radius: 100px;
+    margin-top: 30px;
+    display: block;
+    text-align: center;
+    //width: 100%;
+    &:hover {
+      background-color: darken($TURQUOISE, 5);
+    }
+    @media (min-width: $TABLETTE) {
+      //width: 33%;
+    }
+  }
   ul {
     list-style: none;
     padding: 0;
@@ -102,11 +118,33 @@
       margin-bottom: 40px;
     }
     &__vignette {
-      margin-bottom: 20px;
+      margin: 0 0 20px 0;
+      position: relative;
+      z-index: 0;
       &__image {
-        padding-right: 0;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        &__foreground {
+          position: absolute;
+          left: 0;
+          right: 0;
+          background-color: rgba(0, 0, 0, 0.5);
+          //background-color: white;
+          width: 100%;
+          height: 100%;
+          z-index: 998;
+          transition: opacity .2s ease-in-out;
+          @media (min-width: $DESKTOP-NORMAL) {
+            opacity: 0;
+            &:hover {
+              opacity: 100%;
+              transition: opacity .2s ease-in-out;
+            }
+          }
+        }
         img {
-          height: auto;
+          width: 100%;
           max-width: 100%;
         }
       }
@@ -114,16 +152,24 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        background-color: $GRIS_PALE;
+        position: absolute;
+        top: 5%;
+        left: 10%;
+        width: 80%;
+        height: 90%;
+        z-index: 999;
         &__titre {
-          font-size: 18px !important;
+          color: white;
         }
         &__auteur {
-          color: $TURQUOISE;
-          font-size: 12px !important;
+          color: $PEAU;
         }
         &__titre {
           margin-top: 5%;
+        }
+        &__prix {
+          color: white;
+          font-size: 50px !important;
         }
       }
       &__bouton_plus {
@@ -133,46 +179,18 @@
         color: white;
         border-radius: 50px;
         padding: 7px;
+        margin-bottom: 2%;
         //margin-top: 10px;
+        &:hover {
+          background-color: lighten($GRIS_FONCE, 5);
+        }
       }
 
       .bouton_panier{
         &Script{
           display: none;
         }
-      }
 
-      @media (min-width: 768px) and (max-width: 992px) {
-        &__details {
-          max-height: 150px !important;
-          .boutons {
-            margin-bottom: 7px;
-          }
-          &__titre {
-            font-size: 14px !important;
-          }
-          &__auteur {
-            margin-top: -7px;
-            color: $TURQUOISE;
-            font-size: 10px !important;
-          }
-          &__titre {
-            margin-top: 5%;
-          }
-          &__prix {
-            font-size: 14px !important;
-            margin-bottom: -10px;
-          }
-        }
-        &__bouton_plus {
-          font-size: 10px;
-          padding: 5px;
-        }
-        .bouton_panier {
-          padding: 5px;
-          margin-top: 7px;
-          font-size: 10px;
-        }
       }
     }
   }
@@ -200,6 +218,14 @@
             width: 100%;
             height: 100%;
             z-index: 998;
+            transition: opacity .2s ease-in-out;
+            @media (min-width: $DESKTOP-NORMAL) {
+              opacity: 0;
+              &:hover {
+                opacity: 100%;
+                transition: opacity .2s ease-in-out;
+              }
+            }
           }
           img {
             width: 100%;
@@ -208,9 +234,7 @@
         }
 
         &__details {
-          //&__info {
-          //  height: 70%;
-          //}
+
           display: flex;
           flex-direction: column;
           justify-content: space-between;
@@ -241,6 +265,9 @@
             color: black;
             border-radius: 50px;
             padding: 7px;
+            &:hover {
+              background-color: darken($PEAU, 6);
+            }
           }
 
           .bouton_panier{
@@ -255,6 +282,7 @@
 
   .actualites {
     margin-top: 50px;
+    margin-bottom: 60px;
     h2 {
       margin-bottom: 40px;
     }
