--- a/ressources/liaisons/scss/pages/_accueil.scss
+++ b/ressources/liaisons/scss/pages/_accueil.scss
@@ -182,7 +182,7 @@
         margin-bottom: 2%;
         //margin-top: 10px;
         &:hover {
-          background-color: lighten($GRIS_FONCE, 5);
+          background-color: darken($GRIS_FONCE, 5);
         }
       }
 
@@ -259,14 +259,15 @@
         &__boutons {
           //height: 60% !important;
           &__bouton_plus {
-            background-color: $PEAU;
+            color: $BLANC;
+            background-color: $GRIS_FONCE;
             display: block;
             text-align: center;
-            color: black;
             border-radius: 50px;
             padding: 7px;
             &:hover {
-              background-color: darken($PEAU, 6);
+              color: $BLANC;
+              background-color: darken($GRIS_FONCE, 5);
             }
           }
 
